--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -3,18 +3,81 @@
 {% block title %}Hello BlogController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/sarra/html/formation-symfony4/outstanding/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/sarra/html/formation-symfony4/outstanding/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <section class="articles">
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 10/05/2019</div>
+            <div class="content">
+                <img src="http://placehold.it/350x150" alt="">
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <a href="" class="btn btn-primary">Lire la suite...</a>
+        </article>
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 10/05/2019</div>
+            <div class="content">
+                <img src="http://placehold.it/350x150" alt="">
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <a href="" class="btn btn-primary">Lire la suite...</a>
+        </article>
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 10/05/2019</div>
+            <div class="content">
+                <img src="http://placehold.it/350x150" alt="">
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <p>Le Lorem Ipsum est simplement du faux texte employé
+                    dans la composition et la mise en page avant impression.
+                    Le Lorem Ipsum est le faux texte standard de l'imprimerie
+                    depuis les années 1500, quand un imprimeur anonyme
+                    assembla ensemble des morceaux de texte pour réaliser
+                    un livre spécimen de polices de texte.</p>
+                <a href="" class="btn btn-primary">Lire la suite...</a>
+        </article>
+    </section>
 {% endblock %}
