--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -27,7 +27,7 @@
                     depuis les années 1500, quand un imprimeur anonyme
                     assembla ensemble des morceaux de texte pour réaliser
                     un livre spécimen de polices de texte.</p>
-                <a href="" class="btn btn-primary">Lire la suite...</a>
+                <a href="{{ path('blog_show')}}" class="btn btn-primary">Lire la suite...</a>
         </article>
         <article>
             <h2>Titre de l'article</h2>
@@ -52,7 +52,7 @@
                     depuis les années 1500, quand un imprimeur anonyme
                     assembla ensemble des morceaux de texte pour réaliser
                     un livre spécimen de polices de texte.</p>
-                <a href="" class="btn btn-primary">Lire la suite...</a>
+                <a href="{{ path('blog_show')}}" class="btn btn-primary">Lire la suite...</a>
         </article>
         <article>
             <h2>Titre de l'article</h2>
@@ -77,7 +77,7 @@
                     depuis les années 1500, quand un imprimeur anonyme
                     assembla ensemble des morceaux de texte pour réaliser
                     un livre spécimen de polices de texte.</p>
-                <a href="" class="btn btn-primary">Lire la suite...</a>
+                <a href="{{ path('blog_show')}}" class="btn btn-primary">Lire la suite...</a>
         </article>
     </section>
 {% endblock %}
