--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -11,7 +11,8 @@
             <div class="content">
                 <img src="{{ article.image }}" alt="">
                 <p>{{ article.content | raw }}</p> 
-                <a href="{{ path('blog_show')}}" class="btn btn-primary">Lire la suite...</a>
+                <a href="{{ path('blog_show', {'id': article.id})}}" class="btn btn-primary">Lire la suite...</a>
+            </div>
         </article>
     {% endfor %}
     </section>
