--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,50 +1,11 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <article>
-    <h2>Titre de l'article</h2>
-    <div class="metadata">Ecrit le 10/05/2019</div>
+    <h2>{{article.title}}</h2>
+    <div class="metadata">{{ article.createdAt | date ('d/m/Y') }} à {{ article.createdAt | date('H:i')}}</div>
     <div class="content">
-        <img src="http://placehold.it/350x150" alt="">
-        <p>Le Lorem Ipsum est simplement du faux texte employé
-            dans la composition et la mise en page avant impression.
-            Le Lorem Ipsum est le faux texte standard de l'imprimerie
-            depuis les années 1500, quand un imprimeur anonyme
-            assembla ensemble des morceaux de texte pour réaliser
-            un livre spécimen de polices de texte.</p>
-        <p>Le Lorem Ipsum est simplement du faux texte employé
-            dans la composition et la mise en page avant impression.
-            Le Lorem Ipsum est le faux texte standard de l'imprimerie
-            depuis les années 1500, quand un imprimeur anonyme
-            assembla ensemble des morceaux de texte pour réaliser
-            un livre spécimen de polices de texte.</p>
-        <p>Le Lorem Ipsum est simplement du faux texte employé
-            dans la composition et la mise en page avant impression.
-            Le Lorem Ipsum est le faux texte standard de l'imprimerie
-            depuis les années 1500, quand un imprimeur anonyme
-            assembla ensemble des morceaux de texte pour réaliser
-            un livre spécimen de polices de texte.</p>
-        <hr>
-        <p>Le Lorem Ipsum est simplement du faux texte employé
-        dans la composition et la mise en page avant impression.
-        Le Lorem Ipsum est le faux texte standard de l'imprimerie
-        depuis les années 1500, quand un imprimeur anonyme
-        assembla ensemble des morceaux de texte pour réaliser
-        un livre spécimen de polices de texte.
-        Le Lorem Ipsum est simplement du faux texte employé
-        dans la composition et la mise en page avant impression.
-        Le Lorem Ipsum est le faux texte standard de l'imprimerie
-        depuis les années 1500, quand un imprimeur anonyme
-        assembla ensemble des morceaux de texte pour réaliser
-        un livre spécimen de polices de texte.Le Lorem Ipsum est simplement du faux texte employé
-        dans la composition et la mise en page avant impression.
-        Le Lorem Ipsum est le faux texte standard de l'imprimerie
-        depuis les années 1500, quand un imprimeur anonyme
-        assembla ensemble des morceaux de texte pour réaliser
-        un livre spécimen de polices de texte.Le Lorem Ipsum est simplement du faux texte employé
-        dans la composition et la mise en page avant impression.
-        Le Lorem Ipsum est le faux texte standard de l'imprimerie
-        depuis les années 1500, quand un imprimeur anonyme
-        assembla ensemble des morceaux de texte pour réaliser
-        un livre spécimen de polices de texte.</p>
+        <img src="{{ article.image }}" alt="">
+        <p>{{ article.content | raw }}</p> 
+    </div>
 </article>
 {% endblock %}
