--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">Outstanding</a>
+            <a class="navbar-brand" href="{{ path('home') }}">Outstanding</a>
             <button aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarColor01" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/blog">Articles</a>
+                        <a class="nav-link" href="{{ path('blog') }}">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog/new">Créer un article</a>
+                        <a class="nav-link" href="{{ path('blog_create') }}">Créer un article</a>
                     </li>
                 </ul>
                 
