--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -9,6 +9,13 @@
           {{ form_row(formArticle.content,{'attr' : {'placeholder': "Contenu de l'article"}}) }}
           {{ form_row(formArticle.image,{'attr' : {'placeholder': "URL Image de l'article"}}) }}
 
-          <button type="submit" class="btn btn-success">Ajouter l'article</button>
+          <button type="submit" class="btn btn-success">
+          {# changer text du boutton submit  #}
+          {% if editMode %}
+          Enregistrer
+          {% else %}
+          Ajouter l'article
+          {% endif %}
+          </button>
     {{ form_end(formArticle) }}
 {% endblock %}
