--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <h2>Création d'un article</h2>
 
-    {{ form_start(formArticle) }}
+    {{ form_start(formArticle.title) }}
           {{ form_row(formArticle.title,{'attr' : {'placeholder': "Titre de l'article"}}) }}
           {{ form_row(formArticle.content,{'attr' : {'placeholder': "Contenu de l'article"}}) }}
           {{ form_row(formArticle.image,{'attr' : {'placeholder': "URL Image de l'article"}}) }}
